turtleart.lessons.turtleart.Main.CircleYing.scala.error
Source:4: error: not found: value demiCerle
demiCerle(360,1,true)
^Source:5: error: not found: value demiCerle
demiCerle(360,1,false)
^